@@ -1,13 +1,13 @@
 import styled from 'styled-components'
 import { Text } from '@lib/ui/text'
-import { FocusDuration } from '@increaser/entities/FocusDuration'
 import { InputContainer } from '@lib/ui/inputs/InputContainer'
 import { InputLabel } from '@lib/ui/inputs/InputLabel'
 import { toSizeUnit } from '@lib/ui/css/toSizeUnit'
 import { panelDefaultPadding } from '@lib/ui/css/panel'
 import { ElementSizeAware } from '@lib/ui/base/ElementSizeAware'
 import { FocusDurationInputContent } from './FocusDurationInputContent'
-import { InputProps } from '@lib/ui/props'
+import { useFocusDuration } from '../state/focusDuration'
+import { useUserChangedFocusDurationAt } from '../state/useUserChangedFocusDurationAt'
 
 const Wrapper = styled(InputContainer)`
   padding: 0;
@@ -19,10 +19,10 @@ const Label = styled(InputLabel)`
   padding-bottom: 0;
 `
 
-export const FocusDurationInput = ({
-  value,
-  onChange,
-}: InputProps<FocusDuration>) => {
+export const FocusDurationInput = () => {
+  const [value, setValue] = useFocusDuration()
+  const [, setTime] = useUserChangedFocusDurationAt()
+
   return (
     <ElementSizeAware
       render={({ size, setElement }) => (
@@ -36,7 +36,10 @@ export const FocusDurationInput = ({
           {size && (
             <FocusDurationInputContent
               value={value}
-              onChange={onChange}
+              onChange={(newValue) => {
+                setTime(Date.now())
+                setValue(newValue)
+              }}
               width={size.width}
             />
           )}
