@@ -2,17 +2,10 @@ import { Set } from '@increaser/entities/User'
 import { getSetsDuration } from '../set/getSetsDuration'
 import { getDistanceBetweenSets } from '../set/getDistanceBetweenSets'
 import { MS_IN_MIN } from '@lib/utils/time'
-import { Block } from '@increaser/entities/Block'
+import { Block, blockMaxBreak } from '@increaser/entities/Block'
 import { getLastItem } from '@lib/utils/array/getLastItem'
 
-const blockDistanceInMinutes = 15
-
-const targetBlockInMin = 90
-
 export const getBlockWorkDuration = ({ sets }: Block) => getSetsDuration(sets)
-
-const getDistanceBetweenBlocks = (prevBlock: Block, block: Block) =>
-  getDistanceBetweenSets(getLastItem(prevBlock.sets), block.sets[0])
 
 export const getBlocks = <T extends Set = Set>(sets: T[]): Block<T>[] => {
   const blocks: Block<T>[] = []
@@ -26,7 +19,7 @@ export const getBlocks = <T extends Set = Set>(sets: T[]): Block<T>[] => {
     }
 
     const distance = getDistanceBetweenSets(prevSet, set)
-    if (distance > blockDistanceInMinutes * MS_IN_MIN) {
+    if (distance > blockMaxBreak * MS_IN_MIN) {
       blocks.push({ sets: [set] })
       return
     }
@@ -41,8 +34,3 @@ export const getBlockBoundaries = (block: Block) => ({
   start: block.sets[0].start,
   end: getLastItem(block.sets).end,
 })
-
-const getBlockDuration = (block: Block) => {
-  const { start, end } = getBlockBoundaries(block)
-  return end - start
-}
