@@ -8,6 +8,8 @@ import { FocusNotifications } from '@increaser/app/focus/notifications/FocusNoti
 import { PausedFocusAutoStop } from './PausedFocusAutoStop'
 import { FocusAutoStop } from './FocusAutoStop'
 import { LastSetObserver } from './autoStop/LastSetObserver'
+import { FocusDurationManager } from './FocusDurationManager'
+import { NoFocusOnly } from '@increaser/app/focus/components/NoFocusOnly'
 
 export const FocusManager = () => (
   <>
@@ -24,5 +26,8 @@ export const FocusManager = () => (
       <PausedFocusAutoStop />
     </PausedFocusOnly>
     <LastSetObserver />
+    <NoFocusOnly>
+      <FocusDurationManager />
+    </NoFocusOnly>
   </>
 )
